<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListarCachorros">

    <TextView
        android:id="@+id/tv_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/listados"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_indicados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/indicados"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_nao_indicados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/nao_indicados"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_indicados"/>

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/total_cachorros"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_nao_indicados"/>


    <TextView
        android:id="@+id/cachorros_listados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_total"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/cachorros_listados"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lista"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>