<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastrarCachorro">

    <TextView
        android:id="@+id/tv_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/cadastrar_cachorro"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_raca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/campo_raca"
        android:textColor="@color/black"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_raca"
        android:id="@+id/et_raca"/>

    <TextView
        android:id="@+id/tv_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:text="@string/campo_preco"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/et_raca"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_preco"
        android:inputType="numberDecimal"
        android:background="@drawable/edit_text_border"
        android:id="@+id/et_preco"/>

    <Switch
        android:id="@+id/sw_indicacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_preco"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/campo_switch"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="280dp"
        android:layout_height="53dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:onClick="cadastrarCachorro"
        android:text="@string/cadastrar_cachorro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sw_indicacao"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_cadastrar"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>